<resources>
    <string name="app_name">Nota</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">add</string>
    <string name="edited_successfully">Edited Successfully</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="upload_image">upload image</string>
</resources>